Authentication, saving user, and the user service.

--- a/Resources/config/parameters.yml.sample
+++ b/Resources/config/parameters.yml.sample
@@ -1,3 +1,6 @@
 parameters:
+    aw_google_plus.app_name: ...
     aw_google_plus.client_id: ...
+    aw_google_plus.client_secret: ...
+    aw_google_plus.developer_key: ...
     aw_google_plus.client_email: ...
